[gd_scene load_steps=12 format=3 uid="uid://b845nyhds8jwb"]

[ext_resource type="Script" path="res://scripts/card/card.gd" id="1_fm0xn"]
[ext_resource type="Theme" uid="uid://cvdjyyecboo5u" path="res://assets/themes/card.tres" id="2_bwdc5"]
[ext_resource type="Theme" uid="uid://byp2d4agnuqu" path="res://assets/themes/card_borders.tres" id="2_c362d"]
[ext_resource type="Script" path="res://scripts/card/parts/panel.gd" id="3_pqsst"]
[ext_resource type="Script" path="res://scripts/card/parts/label.gd" id="5_b8bfw"]
[ext_resource type="Script" path="res://scripts/card/parts/panel_bordered.gd" id="6_r3a2v"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o30ka"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_iio3t"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 12
border_width_top = 12
border_width_right = 12
border_width_bottom = 12
border_color = Color(1, 1, 1, 1)

[sub_resource type="Theme" id="Theme_7vb3b"]
Panel/styles/panel = SubResource("StyleBoxFlat_iio3t")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yignp"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 12
border_width_top = 12
border_width_right = 12
border_width_bottom = 12
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b0v0x"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 55
corner_radius_bottom_right = 55
corner_radius_bottom_left = 55
corner_detail = 12

[node name="card" type="Node2D"]
script = ExtResource("1_fm0xn")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 512.0
offset_bottom = 512.0

[node name="bg" type="Panel" parent="Control" groups=["foreground"]]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_c362d")
theme_override_styles/panel = SubResource("StyleBoxFlat_o30ka")
script = ExtResource("3_pqsst")

[node name="BoxContainer" type="BoxContainer" parent="Control/bg"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_bwdc5")

[node name="MarginContainer" type="MarginContainer" parent="Control/bg/BoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="card_bg" type="Panel" parent="Control/bg/BoxContainer/MarginContainer" groups=["background"]]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_bwdc5")
script = ExtResource("3_pqsst")

[node name="card_info" type="VBoxContainer" parent="Control/bg/BoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="header" type="HBoxContainer" parent="Control/bg/BoxContainer/MarginContainer/card_info"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_constants/separation = 0

[node name="margin_left" type="MarginContainer" parent="Control/bg/BoxContainer/MarginContainer/card_info/header"]
layout_mode = 2
theme_override_constants/margin_left = 40

[node name="name" type="Label" parent="Control/bg/BoxContainer/MarginContainer/card_info/header" groups=["text"]]
layout_mode = 2
theme = ExtResource("2_bwdc5")
vertical_alignment = 2
script = ExtResource("5_b8bfw")

[node name="health" type="Label" parent="Control/bg/BoxContainer/MarginContainer/card_info/header"]
layout_mode = 2
size_flags_horizontal = 10
theme = ExtResource("2_bwdc5")
theme_override_colors/font_color = Color(0.964706, 0.0156863, 0.00392157, 1)
vertical_alignment = 2

[node name="margin_right" type="MarginContainer" parent="Control/bg/BoxContainer/MarginContainer/card_info/header"]
layout_mode = 2
theme_override_constants/margin_right = 115

[node name="img_margin" type="MarginContainer" parent="Control/bg/BoxContainer/MarginContainer/card_info"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 20

[node name="image_panel" type="Panel" parent="Control/bg/BoxContainer/MarginContainer/card_info/img_margin" groups=["background"]]
clip_contents = true
layout_mode = 2
script = ExtResource("3_pqsst")

[node name="background" type="TextureRect" parent="Control/bg/BoxContainer/MarginContainer/card_info/img_margin/image_panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1

[node name="pose" type="TextureRect" parent="Control/bg/BoxContainer/MarginContainer/card_info/img_margin/image_panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 110.0
offset_bottom = 110.0
grow_horizontal = 2
grow_vertical = 2

[node name="border_overlay" type="Panel" parent="Control/bg/BoxContainer/MarginContainer/card_info/img_margin/image_panel" groups=["foreground"]]
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_7vb3b")
theme_override_styles/panel = SubResource("StyleBoxFlat_yignp")
script = ExtResource("6_r3a2v")

[node name="moves_margin" type="MarginContainer" parent="Control/bg/BoxContainer/MarginContainer/card_info"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_right = 20

[node name="moves" type="VBoxContainer" parent="Control/bg/BoxContainer/MarginContainer/card_info/moves_margin"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2

[node name="primary" type="HBoxContainer" parent="Control/bg/BoxContainer/MarginContainer/card_info/moves_margin/moves"]
layout_mode = 2

[node name="name_container" type="NinePatchRect" parent="Control/bg/BoxContainer/MarginContainer/card_info/moves_margin/moves/primary"]
layout_mode = 2

[node name="name" type="Label" parent="Control/bg/BoxContainer/MarginContainer/card_info/moves_margin/moves/primary/name_container" groups=["text"]]
layout_mode = 2
offset_left = -1.0
offset_right = 444.0
offset_bottom = 47.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
theme = ExtResource("2_bwdc5")
theme_override_font_sizes/font_size = 40
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("5_b8bfw")

[node name="margin" type="MarginContainer" parent="Control/bg/BoxContainer/MarginContainer/card_info/moves_margin/moves/primary"]
layout_mode = 2
theme_override_constants/margin_top = 7
theme_override_constants/margin_bottom = 7

[node name="cost" type="HBoxContainer" parent="Control/bg/BoxContainer/MarginContainer/card_info/moves_margin/moves/primary/margin"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_constants/separation = 2
alignment = 1

[node name="damage" type="Label" parent="Control/bg/BoxContainer/MarginContainer/card_info/moves_margin/moves/primary"]
layout_mode = 2
size_flags_horizontal = 10
theme = ExtResource("2_bwdc5")
theme_override_colors/font_color = Color(0.964706, 0.0156863, 0.00392157, 1)
theme_override_font_sizes/font_size = 40
text = "
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="move_seperator" type="HSeparator" parent="Control/bg/BoxContainer/MarginContainer/card_info/moves_margin/moves"]
layout_mode = 2
theme = ExtResource("2_c362d")

[node name="secondary" type="HBoxContainer" parent="Control/bg/BoxContainer/MarginContainer/card_info/moves_margin/moves"]
layout_mode = 2

[node name="name_container" type="NinePatchRect" parent="Control/bg/BoxContainer/MarginContainer/card_info/moves_margin/moves/secondary"]
layout_mode = 2

[node name="name" type="Label" parent="Control/bg/BoxContainer/MarginContainer/card_info/moves_margin/moves/secondary/name_container" groups=["text"]]
layout_mode = 2
offset_left = -1.0
offset_right = 444.0
offset_bottom = 47.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
theme = ExtResource("2_bwdc5")
theme_override_font_sizes/font_size = 40
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("5_b8bfw")

[node name="margin" type="MarginContainer" parent="Control/bg/BoxContainer/MarginContainer/card_info/moves_margin/moves/secondary"]
layout_mode = 2
theme_override_constants/margin_top = 7
theme_override_constants/margin_bottom = 7

[node name="cost" type="HBoxContainer" parent="Control/bg/BoxContainer/MarginContainer/card_info/moves_margin/moves/secondary/margin"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_constants/separation = 2
alignment = 1

[node name="damage" type="Label" parent="Control/bg/BoxContainer/MarginContainer/card_info/moves_margin/moves/secondary"]
layout_mode = 2
size_flags_horizontal = 10
theme = ExtResource("2_bwdc5")
theme_override_colors/font_color = Color(0.964706, 0.0156863, 0.00392157, 1)
theme_override_font_sizes/font_size = 40
vertical_alignment = 1

[node name="type_circle" type="Panel" parent="Control/bg" groups=["foreground"]]
custom_minimum_size = Vector2(110, 110)
layout_mode = 2
offset_left = 395.0
offset_right = 512.0
offset_bottom = 117.0
theme_override_styles/panel = SubResource("StyleBoxFlat_b0v0x")
script = ExtResource("3_pqsst")

[node name="type_icon_master" type="Control" parent="Control/bg/type_circle"]
anchors_preset = 0
offset_left = 16.0
offset_top = 17.0
offset_right = 100.0
offset_bottom = 101.0
